--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
         <div style="padding:15px; font-size:12px; color:#888; text-align:center;">
             *Rates effective 1 March 2025.<br>
             *Includes specific shift penalties for MOs and SMOs.
+            *This tool is an unofficial estimator created for educational purposes. 
+            *It is not legal or financial advice
+            *Calculations are based on the Doctors in Training (Victorian Public Health Sector) Enterprise Agreement 2022-2026
+            *Please verify all figures with your official payslip and hospital payroll department
+            
         </div>
     </div>
 
@@ -471,4 +476,5 @@
 </script>
 
 </body>
+
 </html>
