--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vic Junior Doctor Pay Calculator</title>
+    <title>Victoria Junior Doctor Pay Calculator</title>
     <style>
         :root { --primary: #005eb8; --bg: #f4f6f8; --card: #ffffff; }
         body { 
@@ -552,3 +552,4 @@
 
 </body>
 </html>
+
