--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </head>
 <body>
 
-    <h2>Vic Junior Doctor Pay Calculator</h2>
+    <h2>Victoria Junior Doctor Pay Calculator</h2>
 
     <div class="panel">
         <label><strong>Select Classification:</strong></label><br>
@@ -552,4 +552,5 @@
 
 </body>
 </html>
+
 
