--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
             <a href="vic/" class="card">
                 <span class="state-badge vic-theme">VIC</span>
                 <h3>Victoria</h3>
-                <p>Updated for 2025 Rates<br>(Split Shift Logic)</p>
+                <p>Updated for 2025 Rates<br></p>
             </a>
 
             <a href="nsw/" class="card">
                 <span class="state-badge nsw-theme">NSW</span>
                 <h3>New South Wales</h3>
-                <p>Updated for 2024/25 Award<br>(Time-Based Penalties)</p>
+                <p>Updated for 2024/25 Award<br></p>
             </a>
         </div>
 
@@ -86,3 +86,4 @@
 </body>
 
 </html>
+
