--- a/index.html
+++ b/index.html
@@ -134,11 +134,17 @@
 
         <div class="content-section">
             <h3>Frequently Asked Questions</h3>
-            
+
             <div class="faq-item">
                 <div class="faq-q">Is this data sent to a server?</div>
                 <p class="faq-a">No. All calculations happen <strong>locally on your device</strong> (in your browser). We do not store, track, or transmit your salary data.</p>
             </div>
+
+                 <div class="faq-item">
+             <div class="faq-q">Why did I make this page?</div>
+        <div class="faq-a">
+            As doctors, for many of us, our first job and pay slip may be when we start work as an intern. From the start we are never even taught how to read a pay slip, and therefore have no way of knowing whether we are being paid correctly. Looking at my own pay slips, I noticed that errors were frequently being made. So I made this calculator to help others understand and analyze their own pay slips according to their rosters and unrostered overtime claims.
+        </div>
 
             <div class="faq-item">
                 <div class="faq-q">Does this include tax?</div>
@@ -170,3 +176,4 @@ Last updated January 2026</p>
 
 </body>
 </html>
+
