--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
             <div class="faq-item">
                 <div class="faq-q">Why does my official payslip differ?</div>
-                <p class="faq-a">Small discrepancies can occur due to specific hospital payroll software rounding (e.g., 4 decimals vs 2 decimals), salary packaging deductions, or specific local allowances not covered here.</p>
+                <p class="faq-a">Small discrepancies can occur due to specific hospital payroll software rounding (e.g., 4 decimals vs 2 decimals), salary packaging deductions, or specific local allowances not covered here. This calculator is intended to help you understand your own pay slip and the enterprise agreement penalties. It is not intended as legal or financial advice, but serves to help flag potential pay discrepancies and start conversations to clarify these differences</p>
             </div>
 
             <div class="faq-item">
@@ -176,4 +176,5 @@ Last updated January 2026</p>
 
 </body>
 </html>
+
 
