--- a/vic/index.html
+++ b/vic/index.html
@@ -124,10 +124,9 @@
 </head>
 <body>
 <nav class="navbar">
-    <a href="index.html" class="active-home">Home</a>
-    <a href="vic/">VIC (DiT)</a>
-    <a href="nsw/">NSW (Award)</a>
-    <a href="qld/">QLD (MOCA7)</a>
+    <a href="../index.html">Home</a>
+    <a href="#" class="active-vic">VIC (DiT)</a> <a href="../nsw/">NSW (Award)</a>
+    <a href="../qld/">QLD (MOCA7)</a>
 </nav>
     
     <h2>Victoria Junior Doctor Pay Calculator</h2>
@@ -594,6 +593,7 @@
 
 </body>
 </html>
+
 
 
 
